# xgboost2ww

./: .gitignore  GoodModelsXGBoost2WW.ipynb  README.md  XGBoost2WWAdultIncomeExample.ipynb  XGBoost2WWDiagnosticExample_ipynb.ipynb  pyproject.toml
notebooks/: #GoodModelsXGBoost2WW.ipynb#  AdultIncome_LongRun_Alpha_Tracking.ipynb  AdultIncome_LongRun_Alpha_Tracking2.ipynb  BadModelsXGBoost2WW.ipynb  GoodModel.ipynb  GoodModelsXGBoost2WW.ipynb  PoorlyTrainedCreditModel.ipynb  SingleGoodModelWWXGBoost2WW.ipynb  SpamBase_Hyperparameter_Sweep_Alpha2_ManifoldSearch.ipynb  SpamBase_Hyperparameter_Sweep_Alpha2_ManifoldSearch_W1278910.ipynb  SpamBase_Hyperparameter_Sweep_Alpha2_ManifoldSearch_W1278910_PANEL_EVALUATION.md  SpamBase_Hyperparameter_Sweep_Alpha2_ManifoldSearch_W1278910_Pareto_AllW.ipynb  SpamBase_Hyperparameter_Sweep_Alpha2_ManifoldSearch_W9.ipynb  SpamBase_Hyperparameter_Sweep_Alpha2_Targeted.ipynb  SpamBase_Hyperparameter_Sweep_Alpha_Trend.ipynb  SpamBase_LongRun_Alpha_Tracking.ipynb  W8GoodModelsXGBoost2WW.ipynb  XGBWWDataMultiSourceXGBoost2WW.ipynb  XGBWWDataMultiSourceXGBoost2WWHyperparamSweep.ipynb  XGBWW_Catalog_Random100_XGBoost_Accuracy.ipynb  XGBWW_Catalog_Random100_XGBoost_Accuracy_LongRun_AlphaTracking.ipynb  XGBWW_Catalog_Random100_XGBoost_Accuracy_WithOverfitCatalog.ipynb  XGBWW_Catalog_Random5_XGBoost_Accuracy.ipynb  XGBWW_Catalog_SingleSource10x10_XGBoost_Accuracy.ipynb  XGBWW_Random10_LongRun_Alpha_Tracking.ipynb  XGBoost2WWAdultIncomeExample.ipynb  XGBoost2WWAdultIncomeHyperparameterSweep.ipynb  XGBoost2WWCovertypeHyperparameterSweep.ipynb  (+4 more)
(+9 files in other folders)
